{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 17,
  "lineage": "821b38e4-7b8b-cc06-a1bc-3a0f65fa706d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "test_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:431525257644:subnet/subnet-0050d0abe171d22e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.17.10.0/28",
            "default_for_az": false,
            "id": "subnet-0050d0abe171d22e5",
            "map_public_ip_on_launch": false,
            "owner_id": "431525257644",
            "state": "available",
            "tags": {
              "Name": "subnet2_vpc2"
            },
            "vpc_id": "vpc-01dead854bdcd69f9"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:431525257644:vpc/vpc-01dead854bdcd69f9",
            "cidr_block": "172.17.10.0/28",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d647a98adf0581de",
                "cidr_block": "172.17.10.0/28",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-869d82e4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01dead854bdcd69f9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07006f14fc5ad5dc1",
            "owner_id": "431525257644",
            "state": "available",
            "tags": {
              "Name": "VPC_TG_2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "test_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:431525257644:network-acl/acl-0e9c95fa1e96f3789",
            "egress": [],
            "id": "acl-0e9c95fa1e96f3789",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.17.10.0/28",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1000,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "172.17.10.0/28",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1500,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "172.17.10.0/28",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2000,
                "to_port": 0
              }
            ],
            "owner_id": "431525257644",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0050d0abe171d22e5"
            ],
            "tags": {},
            "vpc_id": "vpc-01dead854bdcd69f9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "test_nacl_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.17.10.0/28",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1688433974",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e9c95fa1e96f3789",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 1200,
            "to_port": null
          },
          "dependencies": [
            "aws_network_acl.test_nacl"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "test_nacl_rule2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "172.17.10.0/28",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-433091438",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e9c95fa1e96f3789",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 1500,
            "to_port": null
          },
          "dependencies": [
            "aws_network_acl.test_nacl"
          ]
        }
      ]
    }
  ]
}